--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: nspp
 Type: Package
-Title: Estimation of parameters for Neyman-Scott point processes.
+Title: Estimation of parameters for Neyman-Scott point processes
 Version: 0.0.1
 Date: 2015-06-21
 Author: Ben Stevenson <bcs5@st-andrews.ac.uk>
 Maintainer: Ben Stevenson <bcs5@st-andrews.ac.uk>
 Depends:
-    R (>= 3.3.0),
-    Rcpp (>= 0/11/5)
-LinkingTo: Rcpp
+    R (>= 3.0.0),
+    Rcpp (>= 0.11.5)
+Imports:
+    mvtnorm
+#LinkingTo: Rcpp
 Description: This package provides functions for the simulation and parameter estimation of Neyman-Scott point process models.
+License: GPL
 URL: https://github.com/b-steve/nspp
