--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Depends:
     R (>= 3.0.0),
     Rcpp (>= 0.11.5)
 Imports:
-    mvtnorm
+    mvtnorm,
+    optimx
 LinkingTo: Rcpp
 Description: This package provides functions for the simulation and parameter estimation of Neyman-Scott point process models.
 License: GPL
