--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(boot.ns)
 export(empirical.palm)
 export(fit.ns)
 export(sim.ns)
+export(twoplane.siblings)
 import(Rcpp)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
