--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(summary,nspp)
 export(boot.ns)
 export(empirical.palm)
 export(fit.ns)
+export(pbc_distances)
 export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
