--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(pbc_distances)
 export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
+export(sim.twoplane.2D)
 import(Rcpp)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
