--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,11 @@ S3method(summary,nspp)
 export(boot.ns)
 export(empirical.palm)
 export(fit.ns)
+export(fit.twoplane)
 export(pbc_distances)
 export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
-export(sim.twoplane.2D)
 import(Rcpp)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
