Adding additional namespace requirements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,29 @@ export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
 import(Rcpp)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot.new)
+importFrom(graphics,plot.window)
+importFrom(graphics,points)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
+importFrom(stats,coef)
+importFrom(stats,integrate)
+importFrom(stats,optim)
+importFrom(stats,pgamma)
+importFrom(stats,pnorm)
+importFrom(stats,printCoefmat)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,var)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(nspp)
