--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,nspp)
 S3method(print,summary.nspp)
 S3method(summary,nspp)
 export(boot.ns)
+export(buffer_distances)
 export(empirical.palm)
 export(fit.ns)
 export(fit.twoplane)
