--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,9 @@ importFrom(graphics,plot.window)
 importFrom(graphics,points)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
+importFrom(spatstat,crossdist)
 importFrom(stats,coef)
+importFrom(stats,dist)
 importFrom(stats,integrate)
 importFrom(stats,optim)
 importFrom(stats,pgamma)
