Fixing build errors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
 import(Rcpp)
+import(methods)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,box)
