--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(boot.ns)
 export(buffer_distances)
 export(empirical.palm)
 export(fit.ns)
+export(fit.ns_refclass)
 export(fit.twoplane)
 export(pbc_distances)
 export(siblings.twoplane)
@@ -25,6 +26,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,plot.window)
 importFrom(graphics,points)
+importFrom(gsl,hyperg_2F1)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
 importFrom(stats,coef)
