R6 stuff that is working slightly better.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(pbc_distances)
 export(siblings.twoplane)
 export(sim.ns)
 export(sim.twoplane)
+import(R6)
 import(Rcpp)
 import(methods)
 importFrom(graphics,abline)
