--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(boot.ns)
 export(buffer_distances)
 export(empirical.palm)
 export(fit.ns)
+export(fit.ns_r6)
 export(fit.ns_refclass)
 export(fit.twoplane)
 export(pbc_distances)
@@ -34,6 +35,7 @@ importFrom(stats,coef)
 importFrom(stats,dist)
 importFrom(stats,integrate)
 importFrom(stats,optim)
+importFrom(stats,pbeta)
 importFrom(stats,pgamma)
 importFrom(stats,pnorm)
 importFrom(stats,printCoefmat)
