--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(graphics,points)
 importFrom(gsl,hyperg_2F1)
 importFrom(mvtnorm,rmvnorm)
 importFrom(optimx,optimx)
+importFrom(spatstat,crossdist)
 importFrom(stats,coef)
 importFrom(stats,dist)
 importFrom(stats,integrate)
