--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(coef,nspp_r6)
 S3method(coef,twoplane.nspp)
 S3method(confint,boot.nspp)
 S3method(plot,nspp)
+S3method(plot,nspp_r6)
 S3method(print,summary.nspp)
 S3method(summary,nspp)
 export(boot.ns)
