--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(stats,pnorm)
 importFrom(stats,printCoefmat)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
 importFrom(stats,rnorm)
 importFrom(stats,rpois)
 importFrom(stats,runif)
