--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(empirical.palm)
 export(fit.ns)
 export(fit.ns_r6)
 export(fit.twoplane)
+export(fit.twoplane_r6)
 export(pbc_distances)
 export(siblings.twoplane)
 export(sim.ns)
