--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: nspp
 Type: Package
-Title: Estimation of parameters for Neyman-Scott point processes
-Version: 0.0.1
-Date: 2015-06-21
-Author: Ben Stevenson <bcs5@st-andrews.ac.uk>
-Maintainer: Ben Stevenson <bcs5@st-andrews.ac.uk>
+Title: Fitting point process models via the Palm likelihood
+Version: 1.0.0
+Date: 2017-01-27
+Author: Ben Stevenson <ben.stevenson@auckland.ac.nz>
+Maintainer: Ben Stevenson <ben.stevenson@auckland.ac.nz>
 Depends:
     R (>= 3.0.0),
     Rcpp (>= 0.11.5)
@@ -17,8 +17,7 @@ Imports:
 LinkingTo: Rcpp
 Suggests:
     testthat
-Description: This package provides functions for the simulation and parameter
-    estimation of Neyman-Scott point process models.
+Description: This package provides functions for the fitting of point process models using the Palm likelihood function.
 License: GPL
 URL: https://github.com/b-steve/nspp
 LazyData: TRUE
