--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(confint,nspp)
 S3method(plot,nspp)
 S3method(print,summary.nspp)
 S3method(summary,nspp)
-export(boot)
+export(boot.palm)
 export(fit.ns)
 export(fit.twoplane)
 export(fit.void)
