--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(fit.ns)
 export(fit.twocamera)
 export(fit.void)
 export(sim.ns)
+export(sim.twocamera)
 export(sim.void)
 import(R6)
 import(Rcpp)
