--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(stats,printCoefmat)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
+importFrom(stats,rnorm)
 importFrom(stats,rpois)
 importFrom(stats,runif)
 importFrom(stats,sd)
