Fix for weird CRAN check NOTE.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,4 +44,4 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
-useDynLib(palm)
+useDynLib(palm, .registration = TRUE)
