Adding method for optimisation via bobyqa().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(graphics,plot.new)
 importFrom(graphics,plot.window)
 importFrom(graphics,title)
 importFrom(gsl,hyperg_2F1)
+importFrom(minqa,bobyqa)
 importFrom(mvtnorm,rmvnorm)
 importFrom(spatstat,crossdist)
 importFrom(stats,coef)
