--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,5 @@ Description: Functions to fit point process models using the Palm likelihood. Fi
 License: GPL
 URL: https://github.com/b-steve/palm
 LazyData: TRUE
-RoxygenNote: 6.1.0
+Encoding: UTF-8
+RoxygenNote: 6.1.1
