Some stuff to get installr working again.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(sim.void)
 import(R6)
 import(Rcpp)
 import(methods)
+importFrom(Rcpp,sourceCpp)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,box)
