--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,9 @@ import(R6)
 import(Rcpp)
 import(methods)
 importFrom(Rcpp,sourceCpp)
-importFrom(graphics,abline)
-importFrom(graphics,axis)
-importFrom(graphics,box)
 importFrom(graphics,lines)
 importFrom(graphics,par)
-importFrom(graphics,plot.new)
-importFrom(graphics,plot.window)
+importFrom(graphics,plot)
 importFrom(graphics,title)
 importFrom(gsl,hyperg_2F1)
 importFrom(minqa,bobyqa)
